# x-med

./: .dockerignore  .env.example  .gitignore  ALGO_RECHERCHE.md  ARCHITECTURE.md  CLAUDE.md  DEPLOY_BACKEND_COOLIFY.md  Dockerfile  Dockerfile.worker  ETAT_DEMO.md  PIPELINE_EMBEDDINGS.md  PLAN_EVAL.md  PLAN_PARTIE1.md  PLAN_RECHERCHE_PUBMED_CODEX.md  PRESENTATION_MEDECINS.md  ROADMAP_PERTINENCE.md  docker-compose.yml  nixpacks.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_doctors_profiles.py  0003_eval_annotation.py  0004_article_fr.py  0005_saved_searches.py  0006_article_search.py  0007_usage_events.py  0008_doctor_firebase_uid.py  0009_digest_runs.py
app/: config.py  db.py  main.py
bench/: GUIDE_ANNOTATION.md  datasets.py  pool_fr.csv  pubmed_ab.py  queries_fr.json  queries_medecins_fr.md  runner.py
docs/: communication_recherche.md
documents/: google-agentic-rag.html  google-agentic-rag.md
marketing/: README.md  automatisation-linkedin.md  linkedin-page-profile.md  strategie-marketing.md
scripts/: align_embeddings.py  backfill_article_search.py  bench_selection.py  bench_v1_v2.py  build_pool.py  compare_v1_v2.py  dev_up.sh  embed_corpus.py  linkedin_daily.py  load_baseline.py  load_translations.py  prune_article_search.py  pubmed_coverage.py  pubmed_daily.py  refresh_eval_pool.sh  run_benchmark.py
tests/: test_codex_abstracts.py  test_digest_query.py  test_explainability.py  test_search_notifications.py  test_window_keep.py
web/: README.md  next.config.ts  package-lock.json  package.json  proxy.ts
(+77 files in other folders)
