[project]
name = "x-med"
version = "0.1.0"
description = "X-Med — veille médicale PubMed : ingestion, recherche MeSH + sémantique, benchmark multi-modèles"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.6",
    "lxml>=5.3",
    "python-dateutil>=2.9",
    "httpx>=0.28",
    # utilisé par scripts/pubmed_daily.py (download des updatefiles) ; sans lui,
    # une install cœur (uv sync --no-dev, ex. image worker Coolify) casse le cron
    "requests>=2.32",
]

[dependency-groups]
# Étape C/D — embeddings auto-hébergés + benchmark. Installé seulement quand
# on attaque le sémantique (torch CPU est volumineux) : `uv sync --group ml`.
ml = [
    "torch>=2.5",
    "transformers>=4.46",
    "sentence-transformers>=3.3",
    "ir-datasets>=0.5",
    "ranx>=0.3.20",
]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py312"
